add_executable(RectangleTests RectangleTests.cpp )
add_executable(TextTests TextTests.cpp)
add_executable(CircleTests CircleTests.cpp)
add_executable(ImageTests ImageTests.cpp)

target_link_libraries(RectangleTests gtest_main src_lib)
target_link_libraries(TextTests gtest_main src_lib)
target_link_libraries(CircleTests gtest_main src_lib)
target_link_libraries(ImageTests gtest_main src_lib)

add_test(NAME CircleTests COMMAND CircleTests)
add_test(NAME ImageTests COMMAND ImageTests)
add_test(NAME RectangleTests COMMAND RectangleTests)
add_test(NAME TextTests COMMAND TextTests)

include(GoogleTest)